// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _fg-169839737 _fs-1866857425 _fb-1102215147 _btlr-1542637521 _btrr-423228146 _bbrr-298983462 _bblr-1647959011 _bc-913050308 _bs-1155467371 _tsx-1322694990 _s-1524280249 _tsy-484759473 test1"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1289797684 _ox-1551223136 _oy-936289697 who"
    />
    <div
      class="is_View _fd-1289797684 _bc-1757859160 _pt-2069939088 _pb-1524626230 _t-1224251461 ease-in-out-top"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1289797684 _ox-1551223136 _oy-936289697 who"
    />
    <div
      class="is_View _fd-1289797684 _bc-1757805538 _pt-2069939088 _pb-1524626230 _t-874702747 ease-in-out-top"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 5. spread conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _ox-1551223136 _oy-936289697 _bc-1759742223"
    >
      <div
        class="is_View _fd-1155724988 _ox-1551223136 _oy-936289697 _bc-1759742223 hello-world"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _ox-1551223136 _oy-936289697 _bc-1759742223"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _ox-1551223136 _oy-936289697 _bc-913050308"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 7. ternary + data-is 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _pr-1809296233 _pl-2102898680 _pb-18772891 _w-1519751041 _mw-508654819 _mw-1313653272"
    >
      <div
        class="is_View _fd-1155724988 _w-1850139707 _h-1617811780"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 8. styleExpansions 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _t-874702747 _r-1632656972 _b-642571495 _l-1752074805 _p-1627881459"
    >
      <div
        class="is_View _fd-1155724988 _bc-913050308"
      >
        <div
          class="is_View _fd-1155724988 _t-874702747 _r-1632656972 _b-642571495 _l-1752074805 _p-1627881459 _bc-1710635990"
        />
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 9. combines with classname 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _pt-256397734 _pb-18772896 home-top-dish"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 10. extracts Text 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_Text _c-533586090 _fs-560135987"
    >
      <span
        class="is_Text _c-533586090 _us-1298715756"
      >
        <span
          class="is_Text _c-881754320 _fs-560135982 _fw-509159631"
        >
          hello
        </span>
      </span>
    </span>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 12. ternary multiple on same key 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _o-1553737126 _t-2002012876"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 14. extracts pseudo styles and evaluates constants 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _bc-1420312344"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 15. extracts spacer (complex expansion) 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_Spacer is_View _pe-635873870 _w-1165502445 _h-629679316 _mw-1243015271 _mh-2015682816"
    />
    <span
      class="is_Spacer is_View _pe-635873870 _fg-169839737 _fs-1866857425 _fb-1102215147 _w-1770834802 _h-1954775059 _mw-121229638 _mh-1938344769"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 16. deopt when spreading multiple 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _fg-169839737 _fs-1866857425 _fb-1102215147 _bc-913050308"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 18. extracts flexWrap property 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fw-381719595 _fd-1289797684 _g-1012092673"
      data-testid="flex-wrap"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1289797684 _ai-1980109838 _jc-874768870 _fw-381719595"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1289797684 _ai-1980109838 _jc-874768870 _fw-1500538156"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 20. extracts multiple flex properties together 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1155724988 _fw-381719595 _fg-169839737 _fs-1866857424 _fb-1068042260 _ai-1293248916 _jc-2146749355 _ac-1912589696"
      data-testid="flex-properties"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _btlr-2062174463 _btrr-1782469730 _bbrr-1259689622 _bblr-553360973 _fd-1155724988 _fb-1066543801 _mw-2068604972 _ox-1551223136 _oy-936289697 _pt-2069939086 _pr-630016113 _pb-1524626232 _pl-473107995 _w-1519754874 _bc-591996859 _c-1655764817"
    >
      <div
        class="is_View _fw-381719595 _fd-1289797684 _g-489594494 _jc-2146749355"
      >
        <span
          class="is_Text _c-533586090"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _btlr-2062174463 _btrr-1782469730 _bbrr-1259689622 _bblr-553360973 _fd-1155724988 _fb-1068042260 _mw-2068604972 _ox-1551223136 _oy-936289697 _pt-2069939086 _pr-630016113 _pb-1524626232 _pl-473107995 _w-1519754874 _bc-591996859 _c-1655764817"
    >
      <div
        class="is_View _fw-381719595 _fd-1289797684 _g-489594494 _jc-658029924"
      >
        <span
          class="is_Text _c-533586090"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 22. flexWrap with media query conditionals 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fw-785176263 _g-1012092673 _pt-279819439 _pr-829857910 _pb-1107600041 _pl-112089339 _fd-1155724988"
      data-testid="flex-wrap-media"
    >
      <span
        class="is_Text _c-533586090"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 23. inert animatedBy selector flattens with group styles 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View t_group_animated _fd-1155724988"
      data-testid="animated-group"
    >
      <div
        class="is_View _fd-1155724988 _w-1519756021 _bc-379219232"
        data-testid="animated-group-child"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
